Update issuer name styles in certifications_style.css for improved visibility

--- a/certifications_style.css
+++ b/certifications_style.css
@@ -9,7 +9,8 @@ h2 {
 }
 
 .issuer-name {
-  color: #5ad1a5;
+  text-decoration: underline;
+  color: white;
   text-align: left;
   padding-left: 90px;
 }
